OO-3668: aggregated calendars in curriculum